# 2d-gaussian-splatting

./: .flake8  .gitignore  Makefile  Makefile.2dgs  NOTES.md  cameras.json  convert.py  environment.yml  makefile.py  metrics.py  optimize.sh  pyproject.toml  render.py  train.py
conf/: eval.yaml  makefile.yaml  optimize.yaml  train.yaml
conf/callbacks/: model_checkpoint.yaml
conf/data/: couch.yaml  debug.yaml  dummy.yaml  plane.yaml  shapenet.yaml
conf/encoder/: mlp.yaml
conf/encoder/activation/: cosine.yaml  gelu.yaml  gelu_wo_init.yaml  relu.yaml  relu_wo_init.yaml  (+9 more)
conf/hydra/: default.yaml
conf/logger/: gaussian.yaml  tensorboard.yaml  wandb.yaml
conf/model/: dummy.yaml  neural_poisson.yaml
conf/optimizer/: adam.yaml
conf/paths/: default.yaml
conf/scheduler/: exponential.yaml  linear.yaml  none.yaml
conf/trainer/: default.yaml
docs/: helper.md
lib/arguments/: __init__.py
lib/gaussian_renderer/: __init__.py  network_gui.py
lib/logger/: tensorboard.py  wandb.py
lib/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
lib/utils/: camera_utils.py  eval_utils.py  general_utils.py  loss_utils.py  mesh_utils.py  render_utils.py
lib/viewer/: __ini__.py  example.py  viewer.py
neural_poisson/: pyproject.toml  train.py
notebooks/: debug.ipynb  dtu.ipynb  evaluation.ipynb  logger.ipynb  mesh.ipynb  mlp.ipynb  neural_poisson.ipynb  poisson_data.ipynb  poisson_debug.ipynb  pytorch3d.ipynb  shapenet.ipynb  utils.py
scripts/eval_dtu/: eval.py  eval_old.py  evaluate_single_scene.py
submodules/simple-knn/: .gitignore
(+11 files in other folders)
